# agile_flight

./: .gitmodules  README.md  environment.yaml  run.bash  setup.bash  setup_py.bash  setup_ros.bash
dodgedrone_simulation/dodgeros/dodgeros/parameters/: simple_sim_pilot.yaml
envsim/: CMakeLists.txt  package.xml
envsim/generate_environment/: generate_multiple.bash  obstacle_config.yaml
envsim/include/envsim/: visionsim.hpp
envsim/launch/: visionenv_sim.launch
envsim/parameters/: camera_config.yaml
envsim/resources/rviz/: envsim.rviz
envsim/src/: visionsim_node.cpp
envtest/ros/: benchmarking_node.py  dataset_generator.py  evaluation_config.yaml  run_competition.py  user_code.py  utils.py
envtest/ros/autopilot/: att_control.py  autopilot.py  motors_allocation.py  pos_control.py  trajectory_generator.py  utils.py
envtest/ros/planner/dess/: CMakeLists.txt  README.md  main.cpp  package.xml
envtest/ros/planner/dess/include/CommonMath/: Rotation.hpp
envtest/ros/planner/dess/include/RapidQuadcopterTrajectories/: SteeringTrajectoryGenerator.hpp
envtest/ros/planner/dess/include/RectangularPyramidPlanner/: Pyramid.hpp  SteeringPlanner.hpp
envtest/ros/planner/dess/src/: CMakeLists.txt  PlannerNode.cpp  SteeringPlanner.cpp
evaluation_results/: distance_results_plot.py  results_easy.yaml  results_hard.yaml  results_medium.yaml  success_rate.py  time_results_plot.py
flightmare/flightlib/src/envs/vision_env/: vision_env.cpp
flightmare/flightlib/src/sensors/: rgb_camera.cpp
flightmare/flightpy/configs/: scene.yaml
flightmare/flightpy/configs/vision/: config.yaml
flightmare/flightpy/configs/vision/easy/environment_0/: static_obstacles.csv
flightmare/flightpy/configs/vision/easy/environment_1/: static_obstacles.csv
flightmare/flightpy/configs/vision/easy/environment_2/: static_obstacles.csv
flightmare/flightpy/configs/vision/easy/environment_3/: static_obstacles.csv
(+15 files in other folders)
