<?xml version="1.0"?>
<package format="2">
  <name>dess</name>
  <version>0.0.0</version>
  <description>The DESS package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="thethaibinh@gmail.com">Thai Binh Nguyen</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>dodgeros_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>opencv2</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_generation</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

</package>
